--- a/components/language-switcher.html
+++ b/components/language-switcher.html
@@ -1,4 +1,5 @@
 <div style="position: fixed; top: 10px; right: 10px; z-index: 1000;">
     <button onclick="loadLanguage('pl')">Polski</button>
     <button onclick="loadLanguage('en')">English</button>
+    <button onclick="loadLanguage('ru')">Русский</button>
 </div>
